== Tue Nov 10 08:15:14 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Resolved Issue #5 - Message ID generation issue
* Resolved Issue #7 - README add_file examples don't seem to work - Updated readme and
  rdoc in Message#add_file

== Mon Nov  9 23:38:33 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Added ability to create new email via a hash or hash-like object. <mikel>
* Moved all of the Part init into the Message class.  Part now just uses Message's init,
  also moved all the attachment related functions into Message.  As Part is a subclass
  of message, you shouldn't see any interface changes here.

== Fri Nov  6 22:52:10 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* a6ef2b4: Fixed Issue #4 - Can't call encoding on non existant 
  content-transer-encoding header

== Fri Nov  6 00:51:55 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Handled unstructured field folding "blank" lines
* Fixed error in header.rb that created fields into an array, instead of a FieldList, resulting
  in mail.encode returning a random sort order on the header.
* Made unstructured fields attempt to decode their values on :decode

== Thu Nov  5 04:45:31 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* 2acb70a: Closes Issue #1 - Handling badly formatted content-type fields <mikel>

== Wed Nov  4 23:24:32 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* 2b5d608: Closes Issue #2 - Empty header field values not parsing <mikel>
* Version bumb to 1.2.1

== Wed Nov  4 12:54:43 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Renamed Mail::Message.encode! to Mail::Message.ready_to_send!, deprecated :encode! <mikel>
* Rewrote encoding and decoding methods on all classes.  Adds a lot of boiler plate code, but allows us to
  be really precise in each field type that needs custom encoding.  Now all encoding is done by the field_type
  itself.  Need to follow through on the body. <mikel>
* Bump version to 1.2.0 due to changes of :encoded, :decoded behaviour <mikel>
